...
        android:id="@+id/navigation_map"
        android:icon="@drawable/map_selector"
        android:title="@string/navigation_menu_map" />


    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/feed_selector"
        android:title="@string/navigation_menu_feed" />
</menu>
