<?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_filterEventsByTag"
        android:icon="@drawable/ic_search"
        android:title="Search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/dateOrder"
        android:title="Sort by date"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/relevanceOrder"
        android:title="Sort by relevance"
        app:showAsAction="never"
        app:actionViewClass="android.widget.SearchView" />

</menu>