...
        android:layout_marginTop="24dp"
        android:text="Event Date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eventLocation" />

    <TextView
        android:id="@+id/eventName"
        android:layout_width="387dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Event Name"
        android:textColor="#000000"
...
